--- a/index.html
+++ b/index.html
@@ -539,10 +539,11 @@
                 <div class="bar"></div>
             </div>
             <ul class="nav-links" id="nav-links">
+				<li><a href="#agenda">Agenda</a></li>
                 <li><a href="#features">Topic 1</a></li>
                 <li><a href="#details">Topic 2</a></li>
                 <li><a href="#purchase">Summary & Award</a></li>
-                <li><a href="#">Group Photo</a></li>
+                <li><a href="#closing">Register</a></li>
             </ul>
         </div>
     </nav>
@@ -567,12 +568,47 @@
                 </div>
             </div>
 
-            <div class="hero-buttons">
-                <a href="#features" class="btn btn-primary">Topic 1</a>
-                <a href="#details" class="btn btn-secondary">Topic 2</a>
-            </div>
+
         </div>
     </section>
+
+<section class="product-showcase" id="agenda">
+    <div class="container">
+        <h2 class="section-title">Workshop Agenda</h2>
+        <div class="features-grid">
+            <div class="feature-card">
+                <div class="feature-icon">🚀</div>
+                <h3 class="feature-title">Kick off</h3>
+                <p class="feature-desc">13:30 – 13:50<br><span style="color:#86868b;">20 min</span></p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">📊</div>
+                <h3 class="feature-title">ICT系統 & 材料管理KPI</h3>
+                <p class="feature-desc">13:50 – 14:50<br><span style="color:#86868b;">60 min</span></p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">☕</div>
+                <h3 class="feature-title">Break Time</h3>
+                <p class="feature-desc">14:50 – 15:00<br><span style="color:#86868b;">10 min</span></p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">📑</div>
+                <h3 class="feature-title">VN核銷 & CFR報表</h3>
+                <p class="feature-desc">15:00 – 16:00<br><span style="color:#86868b;">60 min</span></p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">🎯</div>
+                <h3 class="feature-title">總結 & 頒獎</h3>
+                <p class="feature-desc">16:00 – 16:25<br><span style="color:#86868b;">25 min</span></p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">📸</div>
+                <h3 class="feature-title">合影</h3>
+                <p class="feature-desc">16:25 – 16:30<br><span style="color:#86868b;">5 min</span></p>
+            </div>
+        </div>
+    </div>
+</section>
 
     <section class="product-showcase" id="features">
         <div class="container">
@@ -641,45 +677,27 @@
                 </div>
             </div>
             
-            <a href="#" class="btn btn-primary">Thanks</a>
+            
         </div>
     </section>
-
+	<section class="product-detail" id="closing">
+		<div class="container">
+			<div class="detail-content">
+				<div class="detail-text" style="text-align: center;">
+					<h2 class="detail-title">Join us</h2>
+					<p class="detail-desc">
+						It’s more than just a presentation—it’s a collaborative experience.<br>
+						Engage with peers, share challenges,<br>
+						and discover smarter ways to manage materials in a dynamic environment!
+					</p>
+				</div>
+				<a href="mailto:MME_Audit@compal.com?subject=Material%20Management%20Workshop%20Registration&body=Dear%20CMME%20team,%0A%0AI%20would%20like%20to%20register%20for%20the%20upcoming%20Material%20Management%20Workshop%20on%20Oct%2021.%20Please%20let%20me%20know%20if%20any%20further%20information%20is%20needed.%0A%0AThank%20you!" class="btn btn-primary">📩 Register</a>
+			</div>
+		</div>
+	</section>
     <footer>
         <div class="container">
             <div class="footer-content">
-
-                <div class="footer-column">
-                    <h3>A31</h3>
-                    <ul>
-            <li><a href="#">Tesa Liu</a></li>
-            <li><a href="#">Leila Hsu</a></li>
-            <li><a href="#">Groupie Yu</a></li>
-            <li><a href="#">Rock Wang</a></li>
-            <li><a href="#">Jesn Zhang</a></li>
-            <li><a href="#">Becky Wang</a></li>
-            <li><a href="#">Stephen Wang</a></li>
-            <li><a href="#">Jeryson Chen</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>A88</h3>
-                    <ul>
-                        <li><a href="#">Xin Su</a></li>
-                        <li><a href="#">Bill Feng</a></li>
-                        <li><a href="#">Joe Deng</a></li>
-                        <li><a href="#">Tobyy Yao</a></li>
-                        <li><a href="#">Alon Long</a></li>
-						<li><a href="#">Yulin Dong</a></li>
-						<li><a href="#">Elay Zhang</a></li>
-						<li><a href="#">Lynn Chueh</a></li>
-						<li><a href="#">Ann Nguyen</a></li>
-						<li><a href="#">Bee Nguyen</a></li>
-						<li><a href="#">JoyceYJ Chen</a></li>
-						<li><a href="#">ShuangHong Zi</a></li>
-                    </ul>
-                </div>
-            </div>
             <div class="copyright">
                 <p>Copyright © 2025 Compal Inc.</p>
             </div>
